# core_affinity_rs

./: .appveyor.yml  .travis.yml  Cargo.toml  README.md  appveyor.yml
src/: lib.rs
